wrapped datatable function for DRY; fixed CSS hierarchy

--- a/DS4SI-tool/www/my-shiny.css
+++ b/DS4SI-tool/www/my-shiny.css
@@ -126,3 +126,51 @@ hr {
   border-top: 1px solid #fff
 }
 
+/* row striping for data table */
+table.dataTable.stripe tbody tr.odd,
+table.dataTable.display tbody tr.odd {
+ background-color:#F5F5F5 !important;
+ border-color: white !important;
+}
+
+/* table row border */
+table.dataTable.row-border tbody th,
+table.dataTable.row-border tbody td,
+table.dataTable.display tbody th,
+table.dataTable.display tbody td {
+ border-top: 0 !important
+}
+
+/* table row hover fill */
+table.dataTable.hover tbody tr:hover,
+table.dataTable.display tbody tr:hover {
+ background-color: #e8e8e8 !important;
+}
+
+/* current table nav button */
+.dataTables_wrapper .dataTables_paginate .paginate_button.current,
+.dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
+   border-radius: 0;
+   color: white !important;
+   border: 0 !important;
+   background-color:#5c5980 !important;
+   background:-webkit-gradient(linear, left top, left bottom, color-stop(0%, #5c5980), color-stop(100%, #5c5980))!important;
+   background:-webkit-linear-gradient(top, #5c5980 0%, #5c5980 100%)!important;
+   background:-moz-linear-gradient(top, #5c5980 0%, #5c5980 100%)!important;
+   background:-ms-linear-gradient(top, #5c5980 0%, #5c5980 100%)!important;
+   background:-o-linear-gradient(top, #5c5980 0%, #5c5980 100%)!important;
+}
+
+/* table nav button hover */
+.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+   border-radius: 0;
+   color: black !important;
+   border: 0 !important;
+   background-color:#e8e8e8 !important;
+   background:-webkit-gradient(linear, left top, left bottom, color-stop(0%, #e8e8e8), color-stop(100%, #e8e8e8))!important;
+   background:-webkit-linear-gradient(top, #e8e8e8 0%, #e8e8e8 100%)!important;
+   background:-moz-linear-gradient(top, #e8e8e8 0%, #e8e8e8 100%)!important;
+   background:-ms-linear-gradient(top, #e8e8e8 0%, #e8e8e8 100%)!important;
+   background:-o-linear-gradient(top, #e8e8e8 0%, #e8e8e8 100%)!important;
+   background:linear-gradient(to bottom, #e8e8e8 0%, #e8e8e8 100%)!important;
+}
